[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/images/ui/windowcommon/26.png" type="Texture" id=1]
[ext_resource path="res://assets/images/ui/skillbuy/1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/skillbuy/82.png" type="Texture" id=3]
[ext_resource path="res://assets/images/icon/skill/swordman/12.png" type="Texture" id=4]
[ext_resource path="res://assets/images/ui/skillbuy/96.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/DroidSansChinese.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/images/ui/skillbuy/0.png" type="Texture" id=7]
[ext_resource path="res://src/scripts/UI/slot/Skillbuy_Item.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=3]
resource_name = "新建动画"
tracks/0/type = "value"
tracks/0/path = NodePath("nameLabel:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.196078, 0.196078, 1 ) ]
}

[node name="Skillbuy_Item" type="TextureButton"]
margin_right = 238.0
margin_bottom = 44.0
rect_min_size = Vector2( 238, 44 )
toggle_mode = true
texture_hover = ExtResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notip" type="TextureRect" parent="."]
margin_left = 158.825
margin_top = 23.0
margin_right = 220.825
margin_bottom = 39.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvtip" type="TextureRect" parent="."]
margin_left = 84.078
margin_top = 23.0
margin_right = 153.078
margin_bottom = 39.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 7.0
margin_right = 32.0
margin_bottom = 35.0
rect_min_size = Vector2( 28, 28 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sp_img" type="TextureRect" parent="."]
margin_left = 37.709
margin_top = 23.0
margin_right = 75.709
margin_bottom = 39.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nameLabel" type="Label" parent="."]
margin_left = 38.0
margin_top = 1.0
margin_right = 203.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.196078, 0.196078, 1 )
text = "魔力印记"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spLabel" type="Label" parent="."]
margin_left = 57.0
margin_top = 23.0
margin_right = 75.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0196078, 0.407843, 0.619608, 1 )
text = "20"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lv_tip" type="Label" parent="."]
margin_left = 114.0
margin_top = 23.0
margin_right = 137.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.196078, 0.196078, 1 )
text = "20"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select" type="NinePatchRect" parent="."]
margin_right = 238.0
margin_bottom = 44.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/新建动画" = SubResource( 3 )

[node name="red_color" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.286275 )
margin_left = 4.0
margin_top = 7.0
margin_right = 32.0
margin_bottom = 35.0
rect_min_size = Vector2( 28, 28 )
color = Color( 1, 0, 0, 1 )

[connection signal="mouse_entered" from="icon" to="." method="_on_icon_mouse_entered"]
[connection signal="mouse_exited" from="icon" to="." method="_on_icon_mouse_exited"]
[connection signal="mouse_entered" from="red_color" to="." method="_on_icon_mouse_entered"]
[connection signal="mouse_exited" from="red_color" to="." method="_on_icon_mouse_exited"]
